package social.data.character

import social.data.character.attitude.AttitudeComponent

data class Character(val id: CharacterId, val attitudeComponent: AttitudeComponent)