package social.data.character.attitude

data class Attitude(val type: AttitudeType, val value: Int)