@startuml

hide empty members

package character {

package attitude {

class Attitude {
  String name
  int default
}

class AttitudeComponent {
  Map<Pair<CharacterId,Attitude>,Int> attitudes
  Map<Attitude,Int> getAttitudes(CharacterId id)
  Map<CharacterId,Int> getAttitudes(Attitude type)
  int getAttitude(CharacterId id, Attitude type)
}

}

class CharacterId

class Character

}

AttitudeComponent --  Attitude
Character *--  AttitudeComponent
CharacterId *--  Character

@enduml